# second-certainty

./: .coveragerc  .env.example  .flake8  .gitignore  API.html  API.md  README.html  README.md  add_admin_field.py  alembic.ini  create_admin.py  debug_user_profile.py  env.example  fetch_all_tax_years.ps1  fetch_tax_data.py  fix_bcrypt.py  fix_code_quality.py  init_db.py  linter.py  list_users.py  manual_tax_import.py  pyproject.toml  quick_test_setup.py  requirements.txt  setup.py  setup_dependencies.py  test_diagnostics.py  test_runner.py
app/: main.py
app/api/: dependencies.py
app/api/dependencies/: auth.py
app/api/routes/: admin.py  auth.py  tax_calculator.py
app/core/: auth.py  config.py  data_scraper.py  database.py  exceptions.py  tax_calculator.py
app/core/scraping/: sars_service.py  tax_parser.py  tax_provider.py  tax_repository.py  web_client.py
app/db/: base.py  base_class.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6bd21db2c3ed_add_is_admin_field_to_user_profile.py  de8e15e5f263_remove_redundant_indexes.py
app/models/: expense.py  income.py  provisional_tax.py  tax_models.py  user.py
app/schemas/: tax_schemas.py
app/utils/: logging_utils.py  tax_utils.py
backup_before_cleanup/: tax_utils.py  test_data_scraper.py  test_tax_calculator.py  test_tax_utils.py
docs/: API.html  API.md  DEPLOYMENT.html  DEPLOYMENT.md  INSTALLATION.html  INSTALLATION.md  user-guide.qmd  write-up.aux  write-up.qmd  write-up.tex  writeup.html  writeup.qmd
scripts/: create_admin.py  debug_user_profile.py  fetch_tax_data.py  init_db.py  list_users.py  seed_data.py  setup.py  update_tax_tables.py
tests/: conftest.py  test_admin_functionality.py  test_api_endpoints.py  test_authentication.py  test_business_logic.py  test_data_validation.py  test_error_handling.py  test_performance.py  test_security.py  test_tax_calculations.py
tests/test_api/: test_admin.py  test_auth.py  test_tax_calculator.py
tests/test_core/: test_data_scraper.py  test_tax_calculator.py
tests/test_utils/: test_tax_utils.py
